--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>GAIA Health - Your Wellness Journey Redefined</title>
+    <title>GO GO GAIA - Your Wellness Journey Redefined</title>
     <meta charset="UTF-8">
-    <meta name="author" content="GAIA Health">
+    <meta name="author" content="GO GO GAIA">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
@@ -13,7 +13,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-expand-lg custom-navbar-bg">
       <div class="container">
-        <a class="navbar-brand" href="#">GAIA Health</a>
+        <a class="navbar-brand" href="#">GO GO GAIA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,8 +43,8 @@
     <main role="main">
         <section class="banner-section text-center">
             <div class="container py-5">
-                <h1 class="display-4 fw-bold">GAIA Health</h1>
-                <p class="lead mb-4">Find Your Balance, with simple, personalized health analytics</p>
+                <h1 class="display-4 fw-bold">Better Understand Your Health Data</h1>
+                <p class="lead mb-4">Track and analyze your health data effortlessly to make informed decisions and achieve long-term well-being.</p>
                 <a class="btn btn-success btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0" role="button">Get Early Access</a>
             </div>
         </section>
@@ -58,8 +58,8 @@
                         <i class="bi bi-eye" style="font-size: 2rem;"></i>
                       </div>
                       <div>
-                          <h2>Simple Health Overview</h2>
-                          <p>Tailored summaries help you track today's health and progress over time, ensuring every aspect of your well-being is simple to understand.</p>
+                          <h3>Simple Health Overview</h3>
+                          <p>Understand your daily health at a glance with tailored summaries.</p>
                       </div>
                     </div>
                     <div class="feature-box col d-flex align-items-start">
@@ -67,8 +67,8 @@
                         <i class="bi bi-calendar3" style="font-size: 2rem;"></i>
                       </div>
                       <div>
-                          <h2>Long Term Outlook</h2>
-                          <p>Focus on sustainable health with strategies that prioritize your long-term well-being, ensuring you maintain vitality today and into the future, without the burnout.</p>
+                          <h3>Long Term Outlook</h3>
+                          <p>Prioritize your long-term well-being with sustainable health strategies.</p>
                       </div>
                     </div>
                     <div class="feature-box col d-flex align-items-start">
@@ -76,8 +76,8 @@
                         <i class="bi bi-cloud-download" style="font-size: 2rem;"></i>
                       </div>
                       <div>
-                          <h2>Dream Data Access</h2>
-                          <p>In-app data processing basics- View and compare different data, finding patterns in your data with our graphs, and statistically assess relationships with our analyses. Not enough? Easily export the data you want as a CSV.</p>
+                          <h3>Dream Data Access</h3>
+                          <p>Easily access, compare, and export your health data for comprehensive insights.</p>
                       </div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                       <i class="bi bi-clock-fill" style="font-size: 2rem;"></i>
                     </div>
                     <div>
-                        <h2>Ultra-Fast Logging</h2>
+                        <h3>Ultra-Fast Logging</h3>
                         <p>Log your health data in under two seconds with our streamlined process, designed for efficiency and ease, keeping your day uninterrupted and your data tracking on point.</p>
                     </div>
                   </div>
@@ -96,7 +96,7 @@
                       <i class="bi bi-pencil-square" style="font-size: 2rem;"></i>
                     </div>
                     <div>
-                        <h2>Log Anything & Habit Tracking</h2>
+                        <h3>Log Anything & Habit Tracking</h3>
                         <p>We let you log anything, allowing you to record and analyze data that is important to you. Habit tracking is directly updated depending on your logged data.</p>
                     </div>
                   </div>
@@ -105,8 +105,8 @@
                       <i class="bi bi-bar-chart-line" style="font-size: 2rem;"></i>
                     </div>
                     <div>
-                        <h2>Single Health Metric</h2>
-                        <p>We simplify preventative health by providing a single research-based metric, setting a clear goal of 100% each day and helping you understand how to achieve it. </p>
+                        <h3>Single Health Metric</h3>
+                        <p>We simplify preventative health by providing a single research-based metric, setting a clear goal of 100% each day and helping you understand how to achieve it.</p>
                     </div>
                   </div>
               </div>
@@ -149,25 +149,25 @@
         </section>
 
         <section id="about" class="manifesto-section">
-          <div class="container">
-              <h2>Make Self Control Sexy Again</h2>
-              <p>When I was studying Clinical Neuroscience, it occurred to me that many Neurological Disorders are cureless, but can have a significant reduction in likelihood with appropriate Preventative Health Practices.</p>
-              <p>As many in Health, this sent me down a rabbit hole of learning, and trying different tech out.</p>
-              <p>I couldn’t find any systems that I was happy with. I hit a lot of obstacles and was constantly getting frustrated and trying something new. Each time, the builders got some things right, but also some things wrong.</p>
-              <p>I started talking to my friends and realised that a lot of them were facing similar issues. They were trying to use data from the wearables they already wore, or the Drs appointments they went to, and couldn’t find any straightforward ways to store the data or get useful/understandable information out of them.</p>
-              <p>I ended up adjusting my system to work with some of them, helping them solve their personal health mysteries:</p>
-              <ul>
-                <li>How can I get my V02 back to normal range?</li>
-                <li>How consistent is my low blood pressure? Should I be worried?</li>
-                <li>How do my different meals impact my insulin levels?</li>
-                <li>I’m nervous about dementia- what can I do???</li>
-                <li>When am I working best, and how can I get more done in less time?</li>
-              </ul>
-              <p>Thus, GAIA was born.</p>
-              <p>I’ll add different things you can log, add different passive sensors, keep the algos and associated recommendations up to date with the most recent research findings, and include the most cutting-edge sensors to help you keep on top of your game.</p>
-              <p>So- check out GAIA! If you have something that you’re thinking about that I don’t account for, let me know! I’ll add it in!</p>
-          </div>
-      </section>
+            <div class="container">
+                <h2>Make Self Control Sexy Again</h2>
+                <p>When I was studying Clinical Neuroscience, it occurred to me that many Neurological Disorders are cureless, but can have a significant reduction in likelihood with appropriate Preventative Health Practices.</p>
+                <p>As many in Health, this sent me down a rabbit hole of learning, and trying different tech out.</p>
+                <p>I couldn’t find any systems that I was happy with. I hit a lot of obstacles and was constantly getting frustrated and trying something new. Each time, the builders got some things right, but also some things wrong.</p>
+                <p>I started talking to my friends and realised that a lot of them were facing similar issues. They were trying to use data from the wearables they already wore, or the Drs appointments they went to, and couldn’t find any straightforward ways to store the data or get useful/understandable information out of them.</p>
+                <p>I ended up adjusting my system to work with some of them, helping them solve their personal health mysteries:</p>
+                <ul>
+                  <li>How can I get my V02 back to normal range?</li>
+                  <li>How consistent is my low blood pressure? Should I be worried?</li>
+                  <li>How do my different meals impact my insulin levels?</li>
+                  <li>I’m nervous about dementia- what can I do???</li>
+                  <li>When am I working best, and how can I get more done in less time?</li>
+                </ul>
+                <p>Thus, GAIA was born.</p>
+                <p>I’ll add different things you can log, add different passive sensors, keep the algos and associated recommendations up to date with the most recent research findings, and include the most cutting-edge sensors to help you keep on top of your game.</p>
+                <p>So- check out GAIA! If you have something that you’re thinking about that I don’t account for, let me know! I’ll add it in!</p>
+            </div>
+        </section>
 
         <!-- Case Studies Section -->
         <section id="case-studies" class="py-5 bg-light">
@@ -182,7 +182,7 @@
                                     <div class="card h-100">
                                         <div class="card-body">
                                             <h3 class="card-title">Pregnancy</h3>
-                                            <p class="card-text">Log the information relevant to your pregnancy and manage your health data in an integrated platform. GAIA Health helps you keep all your important metrics organized and accessible for informed decision-making.</p>
+                                            <p class="card-text">Log the information relevant to your pregnancy and manage your health data in an integrated platform. GO GO GAIA helps you keep all your important metrics organized and accessible for informed decision-making.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -190,7 +190,7 @@
                                     <div class="card h-100">
                                         <div class="card-body">
                                             <h3 class="card-title">Diabetes</h3>
-                                            <p class="card-text">Log the information relevant to your diabetes and manage your blood sugar levels, dietary habits, and overall health data. Use GAIA Health's integrated platform to keep your important metrics organized and accessible for informed decision-making.</p>
+                                            <p class="card-text">Log the information relevant to your diabetes and manage your blood sugar levels, dietary habits, and overall health data. Use GO GO GAIA's integrated platform to keep your important metrics organized and accessible for informed decision-making.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -198,7 +198,7 @@
                                     <div class="card h-100">
                                         <div class="card-body">
                                             <h3 class="card-title">Longevity</h3>
-                                            <p class="card-text">Log the information relevant to your long-term health goals and manage your habits and metrics. GAIA Health's integrated platform helps you keep your important metrics organized and accessible for informed decision-making.</p>
+                                            <p class="card-text">Log the information relevant to your long-term health goals and manage your habits and metrics. GO GO GAIA's integrated platform helps you keep your important metrics organized and accessible for informed decision-making.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -210,7 +210,7 @@
                                     <div class="card h-100">
                                         <div class="card-body">
                                             <h3 class="card-title">Fitness</h3>
-                                            <p class="card-text">Log the information relevant to your fitness activities and manage your workout routines and progress. GAIA Health's integrated platform helps you keep your fitness data organized and accessible for informed decision-making.</p>
+                                            <p class="card-text">Log the information relevant to your fitness activities and manage your workout routines and progress. GO GO GAIA's integrated platform helps you keep your fitness data organized and accessible for informed decision-making.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -218,7 +218,7 @@
                                     <div class="card h-100">
                                         <div class="card-body">
                                             <h3 class="card-title">Research</h3>
-                                            <p class="card-text">Log the information relevant to your research and track various data points with precision. GAIA Health's integrated platform helps you keep your research data organized and accessible for informed decision-making.</p>
+                                            <p class="card-text">Log the information relevant to your research and track various data points with precision. GO GO GAIA's integrated platform helps you keep your research data organized and accessible for informed decision-making.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -226,7 +226,7 @@
                                     <div class="card h-100">
                                         <div class="card-body">
                                             <h3 class="card-title">Mental Health</h3>
-                                            <p class="card-text">Log the information relevant to your mental health and manage your mood, stress levels, and other mental health metrics. GAIA Health's integrated platform helps you keep your mental health data organized and accessible for informed decision-making.</p>
+                                            <p class="card-text">Log the information relevant to your mental health and manage your mood, stress levels, and other mental health metrics. GO GO GAIA's integrated platform helps you keep your mental health data organized and accessible for informed decision-making.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -249,21 +249,21 @@
         <section id="early-access" class="hero-section text-center py-5">
             <div class="container">
                 <h2 class="display-6 fw-bold">Sign Up Today For Free</h2>
-                <p class="lead mb-4">Your feedback can shape the future of personal health management. Get early access and help us make GAIA Health even better.</p>
+                <p class="lead mb-4">Your feedback can shape the future of personal health management. Get early access and help us make GO GO GAIA even better.</p>
                 <a class="btn btn-success btn-lg" href="https://gaia-43925770.hubspotpagebuilder.com/gaia-waitlist-0-0" role="button">Join the Beta Program</a>
             </div>
         </section>
     </main>
 
     <footer class="footer mt-auto py-3 bg-light" id="contact">
-      <div class="container text-center">
-          <p>Connect with us at <a href="mailto:abigailholland22@gmail.com">abigailholland22@gmail.com</a> or on Twitter <a href="https://twitter.com/holland_neuro">@holland_neuro</a></p>
-      </div>
+    <div class="container text-center">
+        <p>Connect with us at <a href="mailto:abigailholland22@gmail.com">abigailholland22@gmail.com</a> or on Twitter <a href="https://twitter.com/holland_neuro">@holland_neuro</a></p>
+    </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
-      document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function() {
     const words = [
         "sleep",
         "eating",
